Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

VERSION 2.6-Beta 1
  FEATURES:
    * The maximum dimensions for embedded covers are now configurable. (BR 279493)
    * Small configuration dialog for iPods that shows troubleshooting information
      and allows to change iPod name.
    * Improved usability of iPod playlists: iPod collection automatically transfers
      tracks dropped to iPod playlists to iPod when it is needed.
    * Tracks can now be transcoded when transferring them to iPod. (BR 291722)
    * A diagnostic dialog reporting versions of Amarok, Qt, KDE and phonon libraries
      as well as the used phonon backend and status of plugins and scripts.
      Patch by Andrzej Hunt.
    * Ability to move track position bookmarks by dragging; patch by
      Jasneet Bhatti. (BR 214721)
    * Amarok can now remember whether and how to transcode tracks when
      transferring them to a particular collection. (BR 264681)
    * "Crop playlist" functionality implemented using drag & drop. (BR 267729, 211811)
    * Added keyboard shortcut for "Edit Track Information..." (BR 173814)
      Patch by Jasneet Bhatti.
    * Support for embedded album covers in non-collection tracks and
      in USB Mass Storage collection.
    * Hold the Shift key when dragging tracks to collections to move them
      instead of copying.
    * New search filter for absolute date
    * Named UMS collections
    * Albums with same name but different album artist are now correctly
      separated in USB Mass Storage, iPod and various online service collections.
    * Support for detecting compilations in USB Mass Storage collection.
    * Support embedded covers for ogg (read only) and flac files. (BR 288752)
    * Track meta-data can be edited in USB Mass Storage collection.
    * Support for album artists in USB Mass Storage collection.
    * album artist (if differs from artist), BPM, labels, last played time and