@@ -4,6 +4,8 @@ Amarok ChangeLog
 
 VERSION 2.6-Beta 1
   FEATURES:
+    * Support for setting and unsetting cover images for iPod albums, can
+      write back covers to file meta-data too, respects configuration.
     * The maximum dimensions for embedded covers are now configurable. (BR 279493)
     * Small configuration dialog for iPods that shows troubleshooting information
       and allows to change iPod name.
